src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>API__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if client is actively using the API.</inlineHelpText>
        <label>API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ARR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ARR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AUM__c</fullName>
        <label>AUM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-250M</fullName>
                </value>
                <value>
                    <fullName>250-1B</fullName>
                </value>
                <value>
                    <fullName>1-3B</fullName>
                </value>
                <value>
                    <fullName>3-10B</fullName>
                </value>
                <value>
                    <fullName>10-50B</fullName>
                </value>
                <value>
                    <fullName>50B+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_6sense_Segment_Names__c</fullName>
        <label>6sense Segment Names</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Category__c</fullName>
        <inlineHelpText>Select the appropriate Category for this Account - to be used in pricing calculations</inlineHelpText>
        <label>Account Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Account_Categories</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Handoff_Date__c</fullName>
        <label>Account Handoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Hierarchy_Ext_Id__c</fullName>
        <description>This field is used to link all Accounts in an Account Hierarchy for the ability to add subscribers across levels and branches.</description>
        <inlineHelpText>This should be the same for all Accounts in a hierarchy. For consistency, either check the parent account OR use the first 5 letters of the top level parent.</inlineHelpText>
        <label>Account Hierarchy Ext Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Tier__c</fullName>
        <inlineHelpText>Select the appropriate Tier for this Account - to be used in pricing calculations</inlineHelpText>
        <label>Account Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Account_Tier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activate_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activate Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activated_Users__c</fullName>
        <label>Activated Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Active_Favor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Favor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advisory_Last_Interaction_Date__c</fullName>
        <label>Advisory Last Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advisory_Next_Steps__c</fullName>
        <label>Advisory Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advisory_Relationship__c</fullName>
        <label>Advisory Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Current Client</fullName>
                </value>
                <value>
                    <fullName>Former Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>We implement this as a checkbox because in some cases Agencies can also be direct clients, therefore it doesn&apos;t make sense to have an Agency/Customer picklist.</description>
        <inlineHelpText>If this Account is an Agency, please tick this box</inlineHelpText>
        <label>Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analyst_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Analyst Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Analyst_Hours__c</fullName>
        <label>Analyst Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_Category__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Tiering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved Tiering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attempts_to_Save__c</fullName>
        <inlineHelpText>Reduced pricing, different service level, additional users, etc</inlineHelpText>
        <label>Attempts to Save</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Became_Client__c</fullName>
        <label>Became Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Score__c</fullName>
        <formula>IF (LEN( BillingStreet) = 0, 0,1)+
IF (LEN( BillingCity ) = 0, 0,1)+
IF (LEN( BillingState) = 0, 0,1)+
IF (LEN( BillingPostalCode) = 0, 0,1)+
IF (LEN( BillingCountry) = 0, 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Street_1__c</fullName>
        <description>Used to capture Billing street information parts used for reporting.</description>
        <inlineHelpText>Used to capture Billing street information parts used for reporting.</inlineHelpText>
        <label>Billing Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_2__c</fullName>
        <description>Used to capture Billing street information parts used for reporting.</description>
        <inlineHelpText>Used to capture Billing street information parts used for reporting.</inlineHelpText>
        <label>Billing Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street_3__c</fullName>
        <description>Used to capture Billing street information parts used for reporting.</description>
        <inlineHelpText>Used to capture Billing street information parts used for reporting.</inlineHelpText>
        <label>Billing Street 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budgeted_Account_Owner__c</fullName>
        <label>Budgeted Account Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budgeted_Priority__c</fullName>
        <label>Budgeted Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>US Core</fullName>
                </value>
                <value>
                    <fullName>Expansion Equity</fullName>
                </value>
                <value>
                    <fullName>Expansion US Core</fullName>
                </value>
                <value>
                    <fullName>Expansion GS News: Europe</fullName>
                </value>
                <value>
                    <fullName>Priority</fullName>
                </value>
                <value>
                    <fullName>Mass Reach (1): Proactive</fullName>
                </value>
                <value>
                    <fullName>Mass Reach (1): Reactive</fullName>
                </value>
                <value>
                    <fullName>CRE Trade (2): Proactive</fullName>
                </value>
                <value>
                    <fullName>CRE Trade (2): Reactive</fullName>
                </value>
                <value>
                    <fullName>Europe (2): Reactive</fullName>
                </value>
                <value>
                    <fullName>U.S. Regional (3)</fullName>
                </value>
                <value>
                    <fullName>FInancial Investing (4)</fullName>
                </value>
                <value>
                    <fullName>Not Serviceable</fullName>
                </value>
                <value>
                    <fullName>Expansion React</fullName>
                    <isActive>false</isActive>
                    <label>Expansion React</label>
                </value>
                <value>
                    <fullName>React Only</fullName>
                    <isActive>false</isActive>
                    <label>React Only</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bulk_Activation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Days_to_Onboarding_Completion__c</fullName>
        <formula>IF(
  AND(NOT(ISBLANK(Account_Handoff_Date__c )), NOT(ISBLANK(Became_Client__c))),
( 
    ((Account_Handoff_Date__c - Became_Client__c) + 
    (CASE( MOD( Became_Client__c- DATE(1900, 1, 1), 7) , 6 , 1, 0) 
    + CASE( MOD( Account_Handoff_Date__c - DATE(1900, 1, 1), 7), 6 , 1, 0)) ) / 7 * 5),0)</formula>
        <inlineHelpText>Number of business days between the Became Client Date, and the completion of the Onboarding handoff event.</inlineHelpText>
        <label>Business Days to Onboarding Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRE_Exposure__c</fullName>
        <label>CRE Exposure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$0-100M</fullName>
                </value>
                <value>
                    <fullName>$100-250M</fullName>
                </value>
                <value>
                    <fullName>$250-500M</fullName>
                </value>
                <value>
                    <fullName>$500M-1B</fullName>
                </value>
                <value>
                    <fullName>$1-3B</fullName>
                </value>
                <value>
                    <fullName>$3-5B</fullName>
                </value>
                <value>
                    <fullName>$5-10B</fullName>
                </value>
                <value>
                    <fullName>$10-50B</fullName>
                </value>
                <value>
                    <fullName>$50B+</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CURRENT_ARR__c</fullName>
        <label>CURRENT ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Segment_New__c</fullName>
        <formula>IF(ISPICKVAL(Company_Type__c, &quot;Accountant&quot;), &quot;Accountant / Consultant / Law Firm&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Alpha Capture&quot;), &quot;Alpha Capture&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Associations&quot;), &quot;University / Press / Associations&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Bank - Investment&quot;), &quot;Bank - Investment&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Bank - Lender&quot;), &quot;Bank - Commercial&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Commercial Broker&quot;), &quot;Commercial Broker&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Competitor&quot;), &quot;Other&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Consultant&quot;), &quot;Accountant / Consultant / Law Firm&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Family Office&quot;), &quot;Family Office/RIA&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Fixed Income/CMBS&quot;), &quot;Fixed Income/CMBS&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Government&quot;), &quot;Government&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Dedicated&quot;), &quot;Equity&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Dedicated, Event Driven&quot;), &quot;Equity&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Generalist&quot;), &quot;Equity&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Generalist, Dedicated Sponsor&quot;), &quot;Equity&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Generalist, Dedicated Sponsor, Event Driven&quot;), &quot;Equity&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Generalist, Event Driven&quot;), &quot;Equity&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;High Net Worth - RIA&quot;), &quot;Family Office/RIA&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Individual&quot;), &quot;Individual&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Institutional Consultant&quot;), &quot;Accountant / Consultant / Law Firm&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Insurance&quot;), &quot;Insurance&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Law Firm&quot;), &quot;Accountant / Consultant / Law Firm&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Long Only&quot;), &quot;Equity&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Long Only- Dedicated&quot;), &quot;Equity&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Long Only- Generalist&quot;), &quot;Equity&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Long Only- Generalist, Dedicated Sponsor&quot;), &quot;Equity&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Pension Fund/Endowment&quot;), &quot;Pension Fund/Endowment/SWF&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Press&quot;), &quot;University / Press / Associations&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Private Equity - Dedicated&quot;), &quot;Private Equity/RE Company&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Private Equity - Diversified&quot;), &quot;Private Equity/RE Company&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Rating Agency&quot;), &quot;Rating Agency&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Real Estate Company&quot;), &quot;Private Equity/RE Company&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;REIT - Coverage Universe&quot;), &quot;REIT&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;REIT - Non Coverage Universe&quot;), &quot;REIT&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Retailer&quot;), &quot;Retailer&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Sovereign Wealth Fund&quot;), &quot;Pension Fund/Endowment/SWF&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Trading Only&quot;), &quot;Other&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;University&quot;), &quot;University / Press / Associations&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Vendor&quot;), &quot;Other&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Other&quot;), &quot;Other&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Non-Contracted Hedge Fund-dedicated&quot;), &quot;Equity&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Non-Contracted Hedge Fund-generalist&quot;), &quot;Equity&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Non-Contracted Long Only-dedicated&quot;), &quot;Equity&quot;,
IF(ISPICKVAL(Company_Type__c, &quot;Non-Contracted Long Only-generalist&quot;), &quot;Equity&quot;,
&quot;None&quot;))))))))))))))))))))))))))))))))))))))))))))</formula>
        <label>Client Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Segment__c</fullName>
        <description>Generalized buckets that each company type falls into for forecasting and reporting purposes</description>
        <label>Client Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accountant / Consultant / Law Firm</fullName>
                </value>
                <value>
                    <fullName>Alpha Capture</fullName>
                </value>
                <value>
                    <fullName>Bank - Commercial</fullName>
                </value>
                <value>
                    <fullName>Bank - Investment</fullName>
                </value>
                <value>
                    <fullName>Commercial Broker</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>Family Office/RIA</fullName>
                </value>
                <value>
                    <fullName>Fixed Income/CMBS</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Pension Fund/Endowment/SWF</fullName>
                </value>
                <value>
                    <fullName>Private Equity/RE Company</fullName>
                </value>
                <value>
                    <fullName>Rating Agency</fullName>
                </value>
                <value>
                    <fullName>REIT</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>University / Press / Associations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Domain_Name__c</fullName>
        <description>Receives Company Domain Name from HubSpot</description>
        <label>Company Domain Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Type_NS_Internal_Id__c</fullName>
        <defaultValue>34</defaultValue>
        <description>Internal Id for Company Type in NetSuite</description>
        <label>Company Type NS Internal Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Ascension Islands</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Barbuda</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Borneo</fullName>
                </value>
                <value>
                    <fullName>Bosnia &amp; Herzegovina</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cross_Street__c</fullName>
        <label>Cross Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_NS_Internal_Id__c</fullName>
        <formula>CASE( CurrencyIsoCode,&apos;USD&apos;,&apos;1&apos;,&apos;CAD&apos;,&apos;3&apos;,&apos;CHF&apos;,&apos;8&apos;,&apos;DKK&apos;,&apos;7&apos;, &apos;EUR&apos;,&apos;4&apos;,&apos;GBP&apos;,&apos;2&apos;,&apos;HUF&apos;,&apos;10&apos;,&apos;NOK&apos;,&apos;5&apos;,&apos;PLN&apos;,&apos;9&apos;,&apos;SEK&apos;,&apos;6&apos;,&apos;TRY&apos;,&apos;11&apos; ,&apos;1&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency NS Internal Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Products_Text__c</fullName>
        <label>Current Products(Text)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Products__c</fullName>
        <label>Current Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerID__c</fullName>
        <externalId>true</externalId>
        <label>CustomerID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Channel_NS_Internal_Id__c</fullName>
        <description>Internal ID of the Customer Channel custom segment in NetSuite</description>
        <label>Customer Channel NS Internal Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Channel__c</fullName>
        <formula>IF(ISPICKVAL(Company_Type__c, &quot;Accountant&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Alpha Capture&quot;), &quot;Non-Contracted - PSI&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Associations&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Bank - Investment&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Bank - Lender&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Commercial Broker&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Competitor&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Consultant&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Family Office&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Fixed Income/CMBS&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Government&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Non-Contracted Long Only-dedicated&quot;), &quot;Non-Contracted - PSI&quot;,  
 IF(ISPICKVAL(Company_Type__c, &quot;Non-Contracted Long Only-generalist&quot;), &quot;Non-Contracted - PSI&quot;,  
 IF(ISPICKVAL(Company_Type__c, &quot;Non-Contracted Hedge Fund-dedicated&quot;), &quot;Non-Contracted - PSI&quot;,  
 IF(ISPICKVAL(Company_Type__c, &quot;Non-Contracted Hedge Fund-generalist&quot;), &quot;Non-Contracted - PSI&quot;,  
 IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Dedicated&quot;), &quot;Contracted - PSI&quot;,  
 IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Dedicated, Event Driven&quot;), &quot;Contracted - PSI&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Generalist&quot;), &quot;Contracted - PSI&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Generalist, Dedicated Sponsor&quot;), &quot;Contracted - PSI&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Generalist, Dedicated Sponsor, Event Driven&quot;), &quot;Contracted - PSI&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Hedge Fund - Generalist, Event Driven&quot;), &quot;Contracted - PSI&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;High Net Worth - RIA&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Individual&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Institutional Consultant&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Insurance&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Law Firm&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Long Only&quot;), &quot;Contracted - PSI&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Long Only- Dedicated&quot;), &quot;Contracted - PSI&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Long Only- Generalist&quot;), &quot;Contracted - PSI&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Long Only- Generalist, Dedicated Sponsor&quot;), &quot;Contracted - PSI&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Pension Fund/Endowment&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Press&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Private Equity - Dedicated&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Private Equity - Diversified&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Rating Agency&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Real Estate Company&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;REIT - Coverage Universe&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;REIT - Non Coverage Universe&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Retailer&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Sovereign Wealth Fund&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Trading Only&quot;), &quot;Non-Contracted - PSI&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;University&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Vendor&quot;), &quot;Subscription - PMP&quot;, 
 IF(ISPICKVAL(Company_Type__c, &quot;Other&quot;), &quot;Subscription - PMP&quot;, 
&quot;NONE&quot;))))))))))))))))))))))))))))))))))))))))))))</formula>
        <label>Customer Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Success_Rep__c</fullName>
        <label>Customer Success Rep</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDS_AUMScoringModel__c</fullName>
        <description>Field to store McKinsey AUM number for the opportunity scoring process</description>
        <label>AUM Scoring Model</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DDS_AUMValue__c</fullName>
        <formula>IF ( AND(NOT(ISBLANK(DDS_CREAUM__c)),NOT(DDS_CREAUM__c=0)), DDS_CREAUM__c,  DDS_AUMScoringModel__c )</formula>
        <label>Scoring Model AUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDS_CREAUM__c</fullName>
        <description>Field to store Green Street AUM number for the opportunity scoring process</description>
        <inlineHelpText>Accounts Real Estate specific AUM including properties and securities - full number (1B =1,000,000,000)</inlineHelpText>
        <label>CRE AUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>